# finance-ml

./: .gitignore  pyproject.toml
github/workflows/: tests.yml
src/: linear_regression.py
src/linear_regression/: __init__.py  linear_regression.py  logger.py
tests/: test_linear_regression.py
