[tool.poetry]
name = "linear_regression"
version = "0.1.0"
description = "A Python package for linear regression modeling."
readme = "README.md"
authors = ["Your Name <yves-marie.saliou@dauphine.eu>"]
keywords = ["linear regression", "machine learning", "statistics"]
packages = [{include = "linear_regression", from="src/"}] 

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]
numpy = ">=2.0.0"
pytest = ">=7.0"
black = ">=23.0"
mypy = ">=1.0"
types-setuptools = "*"

[tool.poetry.urls]
Issues = "https://github.com/yourusername/linear-regression/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
